<resources>
    <string name="app_name">AnimationPractice</string>

    <string name="animation_drawable">Animation Drawable</string>
    <string name="view_animations">View Animations</string>
    <string name="value_animations">Value Animations</string>
    <string name="object_animations">Object Animations</string>
    <string name="custom_view_animations">Custom View Animations</string>

    <string name="progress_template">%d %%</string>
</resources>
